ui-v2 aside Prevent bottom content cut-off
Content at bottom of left activity sidebar was not accessible even when
scrolled to the bottom. This is fixed by reducing the height so that the
sidebar is no longer partially off-screen.

--- a/resources/assets/css/inner/aside.less
+++ b/resources/assets/css/inner/aside.less
@@ -477,6 +477,12 @@
   }
 }
 
+.ui-v2 {
+  .aside-activity.open {
+    height: ~"calc(100vh - 109px)";
+  }
+}
+
 &.ui-v2 .aside-activity .when {
   font-family: @monoFontFamilyV2;
 }
